# tajweed-embeddings

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  tajweed_embedder.py
.github/workflows/: tests.yml
rules-gen/: tajweed_classifier.py
rules-gen/output/: dictionary_chars.txt  tajweed.hafs.embeded.txt
src/tajweed_embeddings/: __init__.py
src/tajweed_embeddings/data/: quran.json  sifat.json
src/tajweed_embeddings/embedder/: __init__.py  cli.py  harakat_embedder.py  letters_embedder.py  sifat_editor.py  sifat_embedder.py  tajweed_embedder.py  tajweed_rules_embedder.py
src/tajweed_embeddings/rules_gen/: README.md  __init__.py  tajweed_classifier.py  tree.py
src/tajweed_embeddings/rules_gen/rule_trees/: ghunnah_tafkheem.start.json  ikhfa.end.json  ikhfa.start.json  madd_2.start.json  silent.start.json
src/tajweed_embeddings/util/: __init__.py  normalization.py  quran_download.py  tanzil_to_json.py
test/: conftest.py  test_cli_args.py  test_normalization.py  test_quran_data.py  test_quran_data_rules.py  test_tajweed_embedder.py  test_tajweed_embedder_ignored.py  test_tajweed_embedder_long.py  test_tajweed_embedder_pause.py  test_tajweed_embedder_scoring.py  test_tajweed_embedder_special.py  test_tajweed_embedder_string.py  test_tajweed_sifat.py
