[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tajweed-embeddings"
version = "1.0.7"
description = "Quran Tajweed Embeddings Generator"
authors = [{ name="Tarek Eldeeb" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26"
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.scripts]
tajweed-embeddings = "tajweed_embeddings.embedder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tajweed_embeddings = [
    "data/sifat.json",
    "rules_gen/rule_trees/*.json",
]
